--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,7 +3,6 @@ $card-margin-top: 20px;
 .container-after-scroll {
   margin-top: 60px;
 }
-
 .card {
   margin-top: 0px;
   height: 248px;
@@ -22,35 +21,20 @@ $card-margin-top: 20px;
 .card:hover {
   box-shadow: 0 16px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+.card.no-hover:hover {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+}
 .card-center {
   height: 30px;
   width: 30px;
   text-align: center;
-  // justify-content: center;
-  // align-items: center;
 }
 .card-servings {
-    // position: absolute;
-    // bottom: 10px;
-    // left: 10px;
-    // font-size: 15px;
-    // text-transform: uppercase;
-    // font-weight: lighter;
-    display: inline-block;
-    padding-right: 8px;
+  display: inline-block;
+  padding-right: 8px;
 }
-// .card-servings .cut {
-//   margin-right: 5px;
-// }
-
 .card-duration {
-  // position: absolute;
-  //   left: 70px;
-  //   font-size: 15px;
-  //   bottom: 10px;
-  //   font-weight: lighter;
-   display: inline-block;
-
+  display: inline-block;
 }
 .dashboard-card {
   height: 100px;
@@ -120,14 +104,14 @@ $card-margin-top: 20px;
 }
 
 .card-info {
-    position: absolute;
-    bottom: 12px;
-    left: 0;
-    padding: 8px 16px;
-    width: 100%;
-    font-size: 16px;
-    font-weight: lighter;
-    line-height: 20px;
+  position: absolute;
+  bottom: 12px;
+  left: 0;
+  padding: 8px 16px;
+  width: 100%;
+  font-size: 16px;
+  font-weight: lighter;
+  line-height: 20px;
 }
 
 .card-gradient {
