added logout function

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,7 +5,6 @@
     <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown" id="icon-white" aria-haspopup="true" aria-expanded="false"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="/users/edit">Edit profile</a></li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'log-out-link' %>
       </ul>
   </div>
   <div class="row">
@@ -56,6 +55,10 @@
     </div>
   </div>
 </div>
+<div class="text-center">
+  <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'btn log-out-link' %>
+</div>
+
 
 <script>
   let favourite = document.getElementById('cont-favourite');
