--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -67,10 +67,10 @@ h2 {
 }
 
 .log-out-link {
-  color: #999999;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: lighter;
-  padding-left: 20px;
-  margin-bottom: -4px;
+ background: $larder-blue;
+ border-radius: 10px;
+ color: white;
+ margin-bottom: 10px;
+ border-color: white;
+ width: 75%;
 }
